implementing endpoint /orders GET
