# src/main/resources/openapi.yaml
@@ -31,6 +31,22 @@ paths:
               schema:
                 $ref: '#/components/schemas/CreateOrderResponse'
 
+    get:
+      tags:
+        - Order
+      summary: Get all orders of the authenticated user
+      operationId: getOrders
+
+      responses:
+        '200':
+          description: Orders found
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GetOrderResponse'
+
   /orders/{orderId}:
     get:
       tags:
